# vaccine-manager

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  Dockerfile  Makefile  README.md  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: backend-format.yml  backend-pytest.yml  ci.yml  frontend-build.yml  frontend-format.yml
app/: entry.client.tsx  root.tsx  routes.ts
app/components/: About.tsx  AddVaccine.tsx  ClientOnly.tsx  FamilyMemberLog.tsx  Home.tsx  ResponsiveAppBar.tsx  Settings.tsx  ViewRecord.tsx
app/contexts/: RepoProvider.tsx
app/hooks/: useStorage.ts
app/lib/: schemas.ts  types.ts
app/lib/storage/: automergeStorage.ts  index.ts  interface.ts  localStorage.ts
app/routes/: add-vaccine.tsx  family-members.tsx  settings.tsx
app/test/: setup.ts
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/vaccine_manager/: auth.py  config.py  db.py  main.py  models.py  pydantic_models.py  sql_app.db  test_main.py
frontend/: .env.example  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend-v2/: DEPLOYMENT.md  GETTING_STARTED.md  README.md  package-lock.json  package.json  wrangler.toml
frontend-v2/app/: root.tsx  routes.ts
frontend-v2/app/components/: Contact.tsx  Home.css  (+3 more)
frontend-v2/public/: manifest.json
frontend/app/: root.tsx
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  index.tsx  jest-dom.d.ts
(+299 files in other folders)
