[project]
name = "vaccine-manager"
version = "0.1.0"
description = "A vaccine management system backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.23",
    "sqlalchemy-utils>=0.41.1",
    "pydantic>=1.10.13",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "flake8>=6.1.0",
    "sqlalchemy2-stubs>=0.0.2a36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "flake8>=6.1.0", 
    "sqlalchemy2-stubs>=0.0.2a36",
]
