[project]
name = "vaccine-manager"
version = "0.1.0"
description = "A vaccine management system backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.23",
    "sqlalchemy-utils>=0.41.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.28.1",
    "uuid6>=2023.5.2",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.0",
    "sqlalchemy2-stubs>=0.0.2a36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.0",
    "sqlalchemy2-stubs>=0.0.2a36",
]
